--- a/index.html
+++ b/index.html
@@ -112,6 +112,34 @@
   </div>
 </section>
 <!--         sesi portfolio end -->
+<!--         sesi contact Start -->
+<section class=" contact" id="contact">
+  <div class="contact-left">
+    <h1>Contact Me</h1>
+    <hr>
+    <form action="">
+      <input type="text" name="name" placeholder="Your Name" class="contact-input" required>
+      <input type="text" name="email" placeholder="Your email" class="contact-input" required>
+      <textarea name="message" placeholder="Your Message" class="contact-input" required></textarea>
+      <button type="submit">submit</button>
+    </form>
+  </div>
+  <div class="contact-right">
+
+  </div>
+</section>
+<!--         sesi contact end -->
+<!--         sesi Footer start -->
+<footer>
+  <h1>Thanks For Comming</h1>
+  <div class="logo">
+
+  </div>
+  <div class="Footer-bottom">
+    <h2>made by <a href="">@MeongOne</a></h2>
+  </div>
+</footer>
+<!--         sesi Footer end -->
 <!--   script icon -->
     <script src="https://kit.fontawesome.com/513381f390.js" crossorigin="anonymous"></script>
 <!--   my script   -->
