--- a/index.html
+++ b/index.html
@@ -114,19 +114,25 @@
 <!--         sesi portfolio end -->
 <!--         sesi contact Start -->
 <section class=" contact" id="contact">
-  <div class="contact-left">
-    <h1>Contact Me</h1>
-    <hr>
-    <form action="">
-      <input type="text" name="name" placeholder="Your Name" class="contact-input" required>
-      <input type="text" name="email" placeholder="Your email" class="contact-input" required>
-      <textarea name="message" placeholder="Your Message" class="contact-input" required></textarea>
-      <button type="submit">submit</button>
-    </form>
-  </div>
-  <div class="contact-right">
-
-  </div>
+    <h3 class="spacing">Contact page</h3>
+    <h1>contact</h1>
+    <div class="wrapper-contact">
+      <div class="contact-left">
+        <div class="contact-title">
+          <h1>Contact Me</h1>
+          <hr>
+        </div>
+        <form action="">
+          <input type="text" name="name" placeholder="Your Name" class="contact-input" required>
+          <input type="text" name="email" placeholder="Your email" class="contact-input" required>
+          <textarea name="message" placeholder="Your Message" class="contact-input textarea" required></textarea>
+          <button type="submit">submit <img src="src/img/arrow_icon.png" alt=""></button>
+        </form>
+      </div>
+      <div class="contact-right">
+        <img src="src/img/right_img.png" alt="">
+      </div>
+    </div>
 </section>
 <!--         sesi contact end -->
 <!--         sesi Footer start -->
