--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
 <footer>
   <h1>Thanks For Comming</h1>
   <div class="logo">
-
+    <i class="fa-brands fa-youtube"></i>
+    <i class="fa-brands fa-instagram"></i>
+    <i class="fa-brands fa-google"></i>
+    <i class="fa-brands fa-facebook"></i>
   </div>
   <div class="Footer-bottom">
     <h2>made by <a href="">@MeongOne</a></h2>
